// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColorSelector > Render > renders correctly in HSL mode 1`] = `
<div>
  <div
    data-overlay-container="true"
  >
    <div
      class="flex flex-col p-4 rounded-xl scroll-mt-20 bg-default-100"
      data-testid="ColorSelector"
      id="0-oklch(0.55 0.22 27)"
      role="presentation"
    >
      <div
        class="flex items-start gap-2"
      >
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="Color picker"
          class="shrink-0 size-16 rounded-large z-10 subpixel-antialiased aria-expanded:opacity-100 aria-expanded:scale-[1] cursor-pointer"
          data-color="oklch(0.55 0.22 27)"
          data-react-aria-pressable="true"
          data-slot="trigger"
          data-testid="ColorBox"
          style="background-color: oklch(0.55 0.22 27);"
          tabindex="0"
          type="button"
        />
        <div
          class="w-full space-y-2"
        >
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_8px)] is-filled"
            data-filled="true"
            data-filled-within="true"
            data-has-value="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="w-full inline-flex tap-highlight-transparent flex-row items-center gap-3 !px-1 !pb-0 !gap-0 relative box-border shadow-[0_1px_0px_0_rgba(0,0,0,0.05)] border-default-200 !rounded-none hover:border-default-300 after:content-[''] after:w-0 after:origin-center after:bg-default-foreground after:absolute after:left-1/2 after:-translate-x-1/2 after:-bottom-[2px] after:h-[2px] group-data-[focus=true]:after:w-full px-2 rounded-small transition-none h-6 min-h-6 is-filled"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <div
                  class="inline-flex w-full items-center h-full box-border pb-0"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label=" "
                    class="w-full bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text dark:autofill:[-webkit-text-fill-color:hsl(var(--heroui-foreground))] [&::-ms-reveal]:hidden transition-none group-data-[has-value=true]:text-foreground text-base font-semibold text-foreground-800 is-filled"
                    data-filled="true"
                    data-filled-within="true"
                    data-slot="input"
                    id="react-aria-_r_1e_"
                    name="color-name-0"
                    tabindex="0"
                    title=""
                    type="text"
                    value="Primary"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
            data-filled="true"
            data-filled-within="true"
            data-has-value="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 group-data-[focus=true]:border-default-foreground group-data-[focus=true]:data-[hover=true]:border-default-foreground rounded-medium !duration-150 transition-colors motion-reduce:transition-none h-8 min-h-8 px-2 is-filled"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="Color value"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text dark:autofill:[-webkit-text-fill-color:hsl(var(--heroui-foreground))] [&::-ms-reveal]:hidden text-small is-filled"
                    data-filled="true"
                    data-filled-within="true"
                    data-slot="input"
                    data-type="text"
                    id="react-aria-_r_1j_"
                    tabindex="0"
                    title=""
                    type="text"
                    value="#d40c1a"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="height: auto; opacity: 1;"
      >
        <div
          class="flex flex-col mt-3 gap-2"
        >
          <div
            class="space-y-3"
            data-testid="ChannelSliders"
          >
            <div
              class="flex items-center gap-2"
            >
              <div
                class="flex-1"
                style="--slider-gradient: linear-gradient(to right, hsl(0 100% 70%), hsl(60 100% 70%), hsl(120 100% 70%), hsl(180 100% 70%), hsl(240 100% 70%), hsl(300 100% 70%), hsl(360 100% 70%));"
              >
                <div
                  aria-label="Hue"
                  class="flex flex-col w-full gap-1"
                  data-hover="false"
                  data-orientation="horizontal"
                  data-slot="base"
                  id="react-aria-_r_2o_"
                  role="group"
                >
                  <div
                    class="relative flex gap-2 items-center"
                    data-slot="track-wrapper"
                  >
                    <div
                      class="w-3 mr-2"
                      data-slot="startContent"
                    >
                      H
                    </div>
                    <div
                      class="flex w-full relative rounded-full border-x-transparent h-3 my-[calc((theme(spacing.6)-theme(spacing.3))/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground bg-transparent border-transparent! border-x-[calc(theme(spacing.5)/2)] bg-[image:var(--slider-gradient)] bg-origin-border bg-clip-border"
                      data-fill-end="false"
                      data-fill-start="true"
                      data-slot="track"
                      data-thumb-hidden="false"
                      data-vertical="false"
                      style="position: relative; touch-action: none;"
                    >
                      <div
                        class="h-full absolute bg-transparent"
                        data-slot="filler"
                        style="left: 0%; width: 98.91636565712699%;"
                      />
                      <div
                        aria-label="Slider thumb 1"
                        class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small size-5 after:size-4"
                        data-react-aria-pressable="true"
                        data-slot="thumb"
                        index="0"
                        orientation="horizontal"
                        style="position: absolute; left: 98.91636565712699%; transform: translate(-50%, -50%); touch-action: none;"
                      >
                        <div
                          style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                        >
                          <input
                            aria-describedby=""
                            aria-details=""
                            aria-labelledby="react-aria-_r_2o_"
                            aria-orientation="horizontal"
                            aria-valuetext="356"
                            id="react-aria-_r_2o_-0"
                            max="359.9"
                            min="0"
                            step="1"
                            tabindex="0"
                            type="range"
                            value="356"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center"
              >
                <input
                  class="w-11 bg-white/10 text-right text-sm text-foreground-600 outline-none focus:ring-1 focus:ring-foreground-300 rounded px-0.5"
                  type="text"
                  value="356"
                />
                <span
                  class="w-2 text-xs text-foreground-500"
                >
                  °
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-2"
            >
              <div
                class="flex-1"
                style="--slider-gradient: linear-gradient(to right, hsl(355.8 0% 43.92%), hsl(355.8 100% 43.92%));"
              >
                <div
                  aria-label="Saturation"
                  class="flex flex-col w-full gap-1"
                  data-hover="false"
                  data-orientation="horizontal"
                  data-slot="base"
                  id="react-aria-_r_2u_"
                  role="group"
                >
                  <div
                    class="relative flex gap-2 items-center"
                    data-slot="track-wrapper"
                  >
                    <div
                      class="w-3 mr-2"
                      data-slot="startContent"
                    >
                      <button
                        class="inline-flex shrink-0 text-base"
                        tabindex="-1"
                        type="button"
                      >
                        S
                      </button>
                    </div>
                    <div
                      class="flex w-full relative rounded-full border-x-transparent h-3 my-[calc((theme(spacing.6)-theme(spacing.3))/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground bg-transparent border-transparent! border-x-[calc(theme(spacing.5)/2)] bg-[image:var(--slider-gradient)] bg-origin-border bg-clip-border"
                      data-fill-end="false"
                      data-fill-start="true"
                      data-slot="track"
                      data-thumb-hidden="false"
                      data-vertical="false"
                      style="position: relative; touch-action: none;"
                    >
                      <div
                        class="h-full absolute bg-transparent"
                        data-slot="filler"
                        style="left: 0%; width: 89%;"
                      />
                      <div
                        aria-label="Slider thumb 1"
                        class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small size-5 after:size-4"
                        data-react-aria-pressable="true"
                        data-slot="thumb"
                        index="0"
                        orientation="horizontal"
                        style="position: absolute; left: 89%; transform: translate(-50%, -50%); touch-action: none;"
                      >
                        <div
                          style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                        >
                          <input
                            aria-describedby=""
                            aria-details=""
                            aria-labelledby="react-aria-_r_2u_"
                            aria-orientation="horizontal"
                            aria-valuetext="89"
                            id="react-aria-_r_2u_-0"
                            max="100"
                            min="0"
                            step="1"
                            tabindex="0"
                            type="range"
                            value="89"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center"
              >
                <input
                  class="w-11 bg-white/10 text-right text-sm text-foreground-600 outline-none focus:ring-1 focus:ring-foreground-300 rounded px-0.5"
                  type="text"
                  value="89"
                />
                <span
                  class="w-2 text-xs text-foreground-500"
                >
                  %
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-2"
            >
              <div
                class="flex-1"
                style="--slider-gradient: linear-gradient(to right, hsl(355.8 89.29% 0%), hsl(355.8 89.29% 50%), hsl(355.8 89.29% 100%));"
              >
                <div
                  aria-label="Lightness"
                  class="flex flex-col w-full gap-1"
                  data-hover="false"
                  data-orientation="horizontal"
                  data-slot="base"
                  id="react-aria-_r_37_"
                  role="group"
                >
                  <div
                    class="relative flex gap-2 items-center"
                    data-slot="track-wrapper"
                  >
                    <div
                      class="w-3 mr-2"
                      data-slot="startContent"
                    >
                      L
                    </div>
                    <div
                      class="flex w-full relative rounded-full border-x-transparent h-3 my-[calc((theme(spacing.6)-theme(spacing.3))/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground bg-transparent border-transparent! border-x-[calc(theme(spacing.5)/2)] bg-[image:var(--slider-gradient)] bg-origin-border bg-clip-border"
                      data-fill-end="false"
                      data-fill-start="true"
                      data-slot="track"
                      data-thumb-hidden="false"
                      data-vertical="false"
                      style="position: relative; touch-action: none;"
                    >
                      <div
                        class="h-full absolute bg-transparent"
                        data-slot="filler"
                        style="left: 0%; width: 44%;"
                      />
                      <div
                        aria-label="Slider thumb 1"
                        class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small size-5 after:size-4"
                        data-react-aria-pressable="true"
                        data-slot="thumb"
                        index="0"
                        orientation="horizontal"
                        style="position: absolute; left: 44%; transform: translate(-50%, -50%); touch-action: none;"
                      >
                        <div
                          style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                        >
                          <input
                            aria-describedby=""
                            aria-details=""
                            aria-labelledby="react-aria-_r_37_"
                            aria-orientation="horizontal"
                            aria-valuetext="44"
                            id="react-aria-_r_37_-0"
                            max="100"
                            min="0"
                            step="1"
                            tabindex="0"
                            type="range"
                            value="44"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center"
              >
                <input
                  class="w-11 bg-white/10 text-right text-sm text-foreground-600 outline-none focus:ring-1 focus:ring-foreground-300 rounded px-0.5"
                  type="text"
                  value="44"
                />
                <span
                  class="w-2 text-xs text-foreground-500"
                >
                  %
                </span>
              </div>
            </div>
          </div>
          <style>
            
      .popover-content-0 { background-color: oklch(0.55 0.22 27); }
      .popover-base-0 {
        &:before {
          background-color: oklch(0.55 0.22 27);
          
        }
       }
      
          </style>
          <div
            class="flex items-center justify-between"
          >
            <div
              class="inline-flex items-center justify-center h-auto"
              role="group"
            >
              <button
                aria-label="Switch to OKLCH"
                class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 [&:not(:first-child):not(:last-child)]:rounded-none [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-default/40 text-default-700 rounded-none first:rounded-s-medium last:rounded-e-medium data-[hover=true]:opacity-hover px-2 min-w-12 h-8 text-xs gap-1"
                data-react-aria-pressable="true"
                tabindex="0"
                type="button"
              >
                OKLCH
              </button>
              <button
                aria-label="Switch to HSL"
                class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 [&:not(:first-child):not(:last-child)]:rounded-none [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-default text-default-foreground rounded-none first:rounded-s-medium last:rounded-e-medium data-[hover=true]:opacity-hover px-2 min-w-12 h-8 text-xs gap-1"
                data-react-aria-pressable="true"
                tabindex="0"
                type="button"
              >
                HSL
                <span
                  class="heroui-ripple"
                  style="position: absolute; background-color: currentcolor; border-radius: 100%; transform-origin: center; pointer-events: none; overflow: hidden; inset: 0px; z-index: 0; width: 0px; height: 0px; transform: translate(0px, 0px) scale(0); opacity: 0.35;"
                />
              </button>
              <button
                aria-label="Switch to RGB"
                class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 [&:not(:first-child):not(:last-child)]:rounded-none [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-default/40 text-default-700 rounded-none first:rounded-s-medium last:rounded-e-medium data-[hover=true]:opacity-hover px-2 min-w-12 h-8 text-xs gap-1"
                data-react-aria-pressable="true"
                tabindex="0"
                type="button"
              >
                RGB
              </button>
            </div>
            <div
              class="flex items-center gap-1"
            >
              <button
                aria-label="Random color"
                class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny gap-2 rounded-small px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 min-w-8 w-8 h-8 rounded-s-none border-l-0"
                data-react-aria-pressable="true"
                tabindex="0"
                type="button"
              >
                <svg
                  class="text-base"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 256 256"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M224,48V96a8,8,0,0,1-8,8H168a8,8,0,0,1,0-16h28.69L182.06,73.37a79.56,79.56,0,0,0-56.13-23.43h-.45A79.52,79.52,0,0,0,69.59,72.71,8,8,0,0,1,58.41,61.27a96,96,0,0,1,135,.79L208,76.69V48a8,8,0,0,1,16,0ZM186.41,183.29a80,80,0,0,1-112.47-.66L59.31,168H88a8,8,0,0,0,0-16H40a8,8,0,0,0-8,8v48a8,8,0,0,0,16,0V179.31l14.63,14.63A95.43,95.43,0,0,0,130,222.06h.53a95.36,95.36,0,0,0,67.07-27.33,8,8,0,0,0-11.18-11.44Z"
                  />
                </svg>
              </button>
              <button
                aria-expanded="false"
                aria-haspopup="dialog"
                aria-label="Change color options"
                class="group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny gap-2 rounded-small px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 min-w-8 w-8 h-8 z-10 aria-expanded:scale-[0.97] aria-expanded:opacity-70 subpixel-antialiased"
                data-react-aria-pressable="true"
                data-slot="trigger"
                tabindex="0"
                type="button"
              >
                <span
                  class="size-8 inline-flex items-center justify-center"
                >
                  <svg
                    class="text-base"
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 256 256"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M40,88H73a32,32,0,0,0,62,0h81a8,8,0,0,0,0-16H135a32,32,0,0,0-62,0H40a8,8,0,0,0,0,16Zm64-24A16,16,0,1,1,88,80,16,16,0,0,1,104,64ZM216,168H199a32,32,0,0,0-62,0H40a8,8,0,0,0,0,16h97a32,32,0,0,0,62,0h17a8,8,0,0,0,0-16Zm-48,24a16,16,0,1,1,16-16A16,16,0,0,1,168,192Z"
                    />
                  </svg>
                </span>
              </button>
              <button
                aria-label="Remove color"
                class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny gap-2 rounded-small px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 min-w-8 w-8 h-8"
                data-react-aria-pressable="true"
                tabindex="0"
                type="button"
              >
                <svg
                  class="text-base"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 256 256"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M216,48H176V40a24,24,0,0,0-24-24H104A24,24,0,0,0,80,40v8H40a8,8,0,0,0,0,16h8V208a16,16,0,0,0,16,16H192a16,16,0,0,0,16-16V64h8a8,8,0,0,0,0-16ZM96,40a8,8,0,0,1,8-8h48a8,8,0,0,1,8,8v8H96Zm96,168H64V64H192ZM112,104v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Zm48,0v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorSelector > Render > renders correctly in OKLCH mode 1`] = `
<div>
  <div
    data-overlay-container="true"
  >
    <div
      class="flex flex-col p-4 rounded-xl scroll-mt-20 bg-default-100"
      data-testid="ColorSelector"
      id="0-oklch(0.55 0.22 27)"
      role="presentation"
    >
      <div
        class="flex items-start gap-2"
      >
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="Color picker"
          class="shrink-0 size-16 rounded-large z-10 subpixel-antialiased aria-expanded:opacity-100 aria-expanded:scale-[1] cursor-pointer"
          data-color="oklch(0.55 0.22 27)"
          data-react-aria-pressable="true"
          data-slot="trigger"
          data-testid="ColorBox"
          style="background-color: oklch(0.55 0.22 27);"
          tabindex="0"
          type="button"
        />
        <div
          class="w-full space-y-2"
        >
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_8px)] is-filled"
            data-filled="true"
            data-filled-within="true"
            data-has-value="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="w-full inline-flex tap-highlight-transparent flex-row items-center gap-3 !px-1 !pb-0 !gap-0 relative box-border shadow-[0_1px_0px_0_rgba(0,0,0,0.05)] border-default-200 !rounded-none hover:border-default-300 after:content-[''] after:w-0 after:origin-center after:bg-default-foreground after:absolute after:left-1/2 after:-translate-x-1/2 after:-bottom-[2px] after:h-[2px] group-data-[focus=true]:after:w-full px-2 rounded-small transition-none h-6 min-h-6 is-filled"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <div
                  class="inline-flex w-full items-center h-full box-border pb-0"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label=" "
                    class="w-full bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text dark:autofill:[-webkit-text-fill-color:hsl(var(--heroui-foreground))] [&::-ms-reveal]:hidden transition-none group-data-[has-value=true]:text-foreground text-base font-semibold text-foreground-800 is-filled"
                    data-filled="true"
                    data-filled-within="true"
                    data-slot="input"
                    id="react-aria-_r_2_"
                    name="color-name-0"
                    tabindex="0"
                    title=""
                    type="text"
                    value="Primary"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
            data-filled="true"
            data-filled-within="true"
            data-has-value="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 group-data-[focus=true]:border-default-foreground group-data-[focus=true]:data-[hover=true]:border-default-foreground rounded-medium !duration-150 transition-colors motion-reduce:transition-none h-8 min-h-8 px-2 is-filled"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="Color value"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text dark:autofill:[-webkit-text-fill-color:hsl(var(--heroui-foreground))] [&::-ms-reveal]:hidden text-small is-filled"
                    data-filled="true"
                    data-filled-within="true"
                    data-slot="input"
                    data-type="text"
                    id="react-aria-_r_7_"
                    tabindex="0"
                    title=""
                    type="text"
                    value="oklch(0.55 0.22 27)"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="height: auto; opacity: 1;"
      >
        <div
          class="flex flex-col mt-3 gap-2"
        >
          <div
            class="space-y-3"
            data-testid="ChannelSliders"
          >
            <div
              class="flex items-center gap-2"
            >
              <div
                class="flex-1"
                style="--slider-gradient: linear-gradient(to right, oklch(0 0.22 27), oklch(0.55 0.22 27), oklch(1 0.22 27));"
              >
                <div
                  aria-label="Lightness"
                  class="flex flex-col w-full gap-1"
                  data-hover="false"
                  data-orientation="horizontal"
                  data-slot="base"
                  id="react-aria-_r_e_"
                  role="group"
                >
                  <div
                    class="relative flex gap-2 items-center"
                    data-slot="track-wrapper"
                  >
                    <div
                      class="w-3 mr-2"
                      data-slot="startContent"
                    >
                      L
                    </div>
                    <div
                      class="flex w-full relative rounded-full border-x-transparent h-3 my-[calc((theme(spacing.6)-theme(spacing.3))/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground bg-transparent border-transparent! border-x-[calc(theme(spacing.5)/2)] bg-[image:var(--slider-gradient)] bg-origin-border bg-clip-border"
                      data-fill-end="false"
                      data-fill-start="true"
                      data-slot="track"
                      data-thumb-hidden="false"
                      data-vertical="false"
                      style="position: relative; touch-action: none;"
                    >
                      <div
                        class="h-full absolute bg-transparent"
                        data-slot="filler"
                        style="left: 0%; width: 55.00000000000001%;"
                      />
                      <div
                        aria-label="Slider thumb 1"
                        class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small size-5 after:size-4"
                        data-react-aria-pressable="true"
                        data-slot="thumb"
                        index="0"
                        orientation="horizontal"
                        style="position: absolute; left: 55.00000000000001%; transform: translate(-50%, -50%); touch-action: none;"
                      >
                        <div
                          style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                        >
                          <input
                            aria-describedby=""
                            aria-details=""
                            aria-labelledby="react-aria-_r_e_"
                            aria-orientation="horizontal"
                            aria-valuetext="0.55"
                            id="react-aria-_r_e_-0"
                            max="1"
                            min="0"
                            step="0.001"
                            tabindex="0"
                            type="range"
                            value="0.55"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center"
              >
                <input
                  class="w-11 bg-white/10 text-right text-sm text-foreground-600 outline-none focus:ring-1 focus:ring-foreground-300 rounded px-0.5"
                  type="text"
                  value="55.0"
                />
                <span
                  class="w-2 text-xs text-foreground-500"
                >
                  %
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-2"
            >
              <div
                class="flex-1"
                style="--slider-gradient: linear-gradient(to right, oklch(0.55 0 27), oklch(0.55 0.25246 27));"
              >
                <div
                  aria-label="Chroma"
                  class="flex flex-col w-full gap-1"
                  data-hover="false"
                  data-orientation="horizontal"
                  data-slot="base"
                  id="react-aria-_r_k_"
                  role="group"
                >
                  <div
                    class="relative flex gap-2 items-center"
                    data-slot="track-wrapper"
                  >
                    <div
                      class="w-3 mr-2"
                      data-slot="startContent"
                    >
                      <button
                        class="inline-flex shrink-0 text-base"
                        tabindex="-1"
                        type="button"
                      >
                        C
                      </button>
                    </div>
                    <div
                      class="flex w-full relative rounded-full border-x-transparent h-3 my-[calc((theme(spacing.6)-theme(spacing.3))/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground bg-transparent border-transparent! border-x-[calc(theme(spacing.5)/2)] bg-[image:var(--slider-gradient)] bg-origin-border bg-clip-border"
                      data-fill-end="false"
                      data-fill-start="true"
                      data-slot="track"
                      data-thumb-hidden="false"
                      data-vertical="false"
                      style="position: relative; touch-action: none;"
                    >
                      <div
                        class="h-full absolute bg-transparent"
                        data-slot="filler"
                        style="left: 0%; width: 87.14251762655469%;"
                      />
                      <div
                        aria-label="Slider thumb 1"
                        class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small size-5 after:size-4"
                        data-react-aria-pressable="true"
                        data-slot="thumb"
                        index="0"
                        orientation="horizontal"
                        style="position: absolute; left: 87.14251762655469%; transform: translate(-50%, -50%); touch-action: none;"
                      >
                        <div
                          style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                        >
                          <input
                            aria-describedby=""
                            aria-details=""
                            aria-labelledby="react-aria-_r_k_"
                            aria-orientation="horizontal"
                            aria-valuetext="0.22"
                            id="react-aria-_r_k_-0"
                            max="0.25246"
                            min="0"
                            step="0.001"
                            tabindex="0"
                            type="range"
                            value="0.22"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center"
              >
                <input
                  class="w-11 bg-white/10 text-right text-sm text-foreground-600 outline-none focus:ring-1 focus:ring-foreground-300 rounded px-0.5"
                  type="text"
                  value="0.220"
                />
                <span
                  class="w-2 text-xs text-foreground-500"
                  style="visibility: hidden;"
                >
                  °
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-2"
            >
              <div
                class="flex-1"
                style="--slider-gradient: linear-gradient(to right, oklch(0.7 0.2 0), oklch(0.7 0.2 60), oklch(0.7 0.2 120), oklch(0.7 0.2 180), oklch(0.7 0.2 240), oklch(0.7 0.2 300), oklch(0.7 0.2 360));"
              >
                <div
                  aria-label="Hue"
                  class="flex flex-col w-full gap-1"
                  data-hover="false"
                  data-orientation="horizontal"
                  data-slot="base"
                  id="react-aria-_r_t_"
                  role="group"
                >
                  <div
                    class="relative flex gap-2 items-center"
                    data-slot="track-wrapper"
                  >
                    <div
                      class="w-3 mr-2"
                      data-slot="startContent"
                    >
                      H
                    </div>
                    <div
                      class="flex w-full relative rounded-full border-x-transparent h-3 my-[calc((theme(spacing.6)-theme(spacing.3))/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground bg-transparent border-transparent! border-x-[calc(theme(spacing.5)/2)] bg-[image:var(--slider-gradient)] bg-origin-border bg-clip-border"
                      data-fill-end="false"
                      data-fill-start="true"
                      data-slot="track"
                      data-thumb-hidden="false"
                      data-vertical="false"
                      style="position: relative; touch-action: none;"
                    >
                      <div
                        class="h-full absolute bg-transparent"
                        data-slot="filler"
                        style="left: 0%; width: 7.5%;"
                      />
                      <div
                        aria-label="Slider thumb 1"
                        class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small size-5 after:size-4"
                        data-react-aria-pressable="true"
                        data-slot="thumb"
                        index="0"
                        orientation="horizontal"
                        style="position: absolute; left: 7.5%; transform: translate(-50%, -50%); touch-action: none;"
                      >
                        <div
                          style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                        >
                          <input
                            aria-describedby=""
                            aria-details=""
                            aria-labelledby="react-aria-_r_t_"
                            aria-orientation="horizontal"
                            aria-valuetext="27"
                            id="react-aria-_r_t_-0"
                            max="360"
                            min="0"
                            step="0.001"
                            tabindex="0"
                            type="range"
                            value="27"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center"
              >
                <input
                  class="w-11 bg-white/10 text-right text-sm text-foreground-600 outline-none focus:ring-1 focus:ring-foreground-300 rounded px-0.5"
                  type="text"
                  value="27.0"
                />
                <span
                  class="w-2 text-xs text-foreground-500"
                >
                  °
                </span>
              </div>
            </div>
          </div>
          <style>
            
      .popover-content-0 { background-color: oklch(0.55 0.22 27); }
      .popover-base-0 {
        &:before {
          background-color: oklch(0.55 0.22 27);
          
        }
       }
      
          </style>
          <div
            class="flex items-center justify-between"
          >
            <div
              class="inline-flex items-center justify-center h-auto"
              role="group"
            >
              <button
                aria-label="Switch to OKLCH"
                class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 [&:not(:first-child):not(:last-child)]:rounded-none [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-default text-default-foreground rounded-none first:rounded-s-medium last:rounded-e-medium data-[hover=true]:opacity-hover px-2 min-w-12 h-8 text-xs gap-1"
                data-react-aria-pressable="true"
                tabindex="0"
                type="button"
              >
                OKLCH
              </button>
              <button
                aria-label="Switch to HSL"
                class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 [&:not(:first-child):not(:last-child)]:rounded-none [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-default/40 text-default-700 rounded-none first:rounded-s-medium last:rounded-e-medium data-[hover=true]:opacity-hover px-2 min-w-12 h-8 text-xs gap-1"
                data-react-aria-pressable="true"
                tabindex="0"
                type="button"
              >
                HSL
              </button>
              <button
                aria-label="Switch to RGB"
                class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 [&:not(:first-child):not(:last-child)]:rounded-none [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-default/40 text-default-700 rounded-none first:rounded-s-medium last:rounded-e-medium data-[hover=true]:opacity-hover px-2 min-w-12 h-8 text-xs gap-1"
                data-react-aria-pressable="true"
                tabindex="0"
                type="button"
              >
                RGB
              </button>
            </div>
            <div
              class="flex items-center gap-1"
            >
              <button
                aria-label="Random color"
                class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny gap-2 rounded-small px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 min-w-8 w-8 h-8 rounded-s-none border-l-0"
                data-react-aria-pressable="true"
                tabindex="0"
                type="button"
              >
                <svg
                  class="text-base"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 256 256"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M224,48V96a8,8,0,0,1-8,8H168a8,8,0,0,1,0-16h28.69L182.06,73.37a79.56,79.56,0,0,0-56.13-23.43h-.45A79.52,79.52,0,0,0,69.59,72.71,8,8,0,0,1,58.41,61.27a96,96,0,0,1,135,.79L208,76.69V48a8,8,0,0,1,16,0ZM186.41,183.29a80,80,0,0,1-112.47-.66L59.31,168H88a8,8,0,0,0,0-16H40a8,8,0,0,0-8,8v48a8,8,0,0,0,16,0V179.31l14.63,14.63A95.43,95.43,0,0,0,130,222.06h.53a95.36,95.36,0,0,0,67.07-27.33,8,8,0,0,0-11.18-11.44Z"
                  />
                </svg>
              </button>
              <button
                aria-expanded="false"
                aria-haspopup="dialog"
                aria-label="Change color options"
                class="group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny gap-2 rounded-small px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 min-w-8 w-8 h-8 z-10 aria-expanded:scale-[0.97] aria-expanded:opacity-70 subpixel-antialiased"
                data-react-aria-pressable="true"
                data-slot="trigger"
                tabindex="0"
                type="button"
              >
                <span
                  class="size-8 inline-flex items-center justify-center"
                >
                  <svg
                    class="text-base"
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 256 256"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M40,88H73a32,32,0,0,0,62,0h81a8,8,0,0,0,0-16H135a32,32,0,0,0-62,0H40a8,8,0,0,0,0,16Zm64-24A16,16,0,1,1,88,80,16,16,0,0,1,104,64ZM216,168H199a32,32,0,0,0-62,0H40a8,8,0,0,0,0,16h97a32,32,0,0,0,62,0h17a8,8,0,0,0,0-16Zm-48,24a16,16,0,1,1,16-16A16,16,0,0,1,168,192Z"
                    />
                  </svg>
                </span>
              </button>
              <button
                aria-label="Remove color"
                class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny gap-2 rounded-small px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 min-w-8 w-8 h-8"
                data-react-aria-pressable="true"
                tabindex="0"
                type="button"
              >
                <svg
                  class="text-base"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 256 256"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M216,48H176V40a24,24,0,0,0-24-24H104A24,24,0,0,0,80,40v8H40a8,8,0,0,0,0,16h8V208a16,16,0,0,0,16,16H192a16,16,0,0,0,16-16V64h8a8,8,0,0,0,0-16ZM96,40a8,8,0,0,1,8-8h48a8,8,0,0,1,8,8v8H96Zm96,168H64V64H192ZM112,104v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Zm48,0v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ColorSelector > Render > renders correctly in RGB mode 1`] = `
<div>
  <div
    data-overlay-container="true"
  >
    <div
      class="flex flex-col p-4 rounded-xl scroll-mt-20 bg-default-100"
      data-testid="ColorSelector"
      id="0-oklch(0.55 0.22 27)"
      role="presentation"
    >
      <div
        class="flex items-start gap-2"
      >
        <button
          aria-expanded="false"
          aria-haspopup="dialog"
          aria-label="Color picker"
          class="shrink-0 size-16 rounded-large z-10 subpixel-antialiased aria-expanded:opacity-100 aria-expanded:scale-[1] cursor-pointer"
          data-color="oklch(0.55 0.22 27)"
          data-react-aria-pressable="true"
          data-slot="trigger"
          data-testid="ColorBox"
          style="background-color: oklch(0.55 0.22 27);"
          tabindex="0"
          type="button"
        />
        <div
          class="w-full space-y-2"
        >
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_8px)] is-filled"
            data-filled="true"
            data-filled-within="true"
            data-has-value="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="w-full inline-flex tap-highlight-transparent flex-row items-center gap-3 !px-1 !pb-0 !gap-0 relative box-border shadow-[0_1px_0px_0_rgba(0,0,0,0.05)] border-default-200 !rounded-none hover:border-default-300 after:content-[''] after:w-0 after:origin-center after:bg-default-foreground after:absolute after:left-1/2 after:-translate-x-1/2 after:-bottom-[2px] after:h-[2px] group-data-[focus=true]:after:w-full px-2 rounded-small transition-none h-6 min-h-6 is-filled"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <div
                  class="inline-flex w-full items-center h-full box-border pb-0"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label=" "
                    class="w-full bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text dark:autofill:[-webkit-text-fill-color:hsl(var(--heroui-foreground))] [&::-ms-reveal]:hidden transition-none group-data-[has-value=true]:text-foreground text-base font-semibold text-foreground-800 is-filled"
                    data-filled="true"
                    data-filled-within="true"
                    data-slot="input"
                    id="react-aria-_r_3i_"
                    name="color-name-0"
                    tabindex="0"
                    title=""
                    type="text"
                    value="Primary"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
            data-filled="true"
            data-filled-within="true"
            data-has-value="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 group-data-[focus=true]:border-default-foreground group-data-[focus=true]:data-[hover=true]:border-default-foreground rounded-medium !duration-150 transition-colors motion-reduce:transition-none h-8 min-h-8 px-2 is-filled"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="Color value"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text dark:autofill:[-webkit-text-fill-color:hsl(var(--heroui-foreground))] [&::-ms-reveal]:hidden text-small is-filled"
                    data-filled="true"
                    data-filled-within="true"
                    data-slot="input"
                    data-type="text"
                    id="react-aria-_r_3n_"
                    tabindex="0"
                    title=""
                    type="text"
                    value="#d40c1a"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="height: auto; opacity: 1;"
      >
        <div
          class="flex flex-col mt-3 gap-2"
        >
          <div
            class="space-y-3"
            data-testid="ChannelSliders"
          >
            <div
              class="flex items-center gap-2"
            >
              <div
                class="flex-1"
                style="--slider-gradient: linear-gradient(to right, rgb(0 0 0), rgb(255 0 0));"
              >
                <div
                  aria-label="Red"
                  class="flex flex-col w-full gap-1"
                  data-hover="false"
                  data-orientation="horizontal"
                  data-slot="base"
                  id="react-aria-_r_4s_"
                  role="group"
                >
                  <div
                    class="relative flex gap-2 items-center"
                    data-slot="track-wrapper"
                  >
                    <div
                      class="w-3 mr-2"
                      data-slot="startContent"
                    >
                      R
                    </div>
                    <div
                      class="flex w-full relative rounded-full border-x-transparent h-3 my-[calc((theme(spacing.6)-theme(spacing.3))/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground bg-transparent border-transparent! border-x-[calc(theme(spacing.5)/2)] bg-[image:var(--slider-gradient)] bg-origin-border bg-clip-border"
                      data-fill-end="false"
                      data-fill-start="true"
                      data-slot="track"
                      data-thumb-hidden="false"
                      data-vertical="false"
                      style="position: relative; touch-action: none;"
                    >
                      <div
                        class="h-full absolute bg-transparent"
                        data-slot="filler"
                        style="left: 0%; width: 83.13725490196079%;"
                      />
                      <div
                        aria-label="Slider thumb 1"
                        class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small size-5 after:size-4"
                        data-react-aria-pressable="true"
                        data-slot="thumb"
                        index="0"
                        orientation="horizontal"
                        style="position: absolute; left: 83.13725490196079%; transform: translate(-50%, -50%); touch-action: none;"
                      >
                        <div
                          style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                        >
                          <input
                            aria-describedby=""
                            aria-details=""
                            aria-labelledby="react-aria-_r_4s_"
                            aria-orientation="horizontal"
                            aria-valuetext="212"
                            id="react-aria-_r_4s_-0"
                            max="255"
                            min="0"
                            step="1"
                            tabindex="0"
                            type="range"
                            value="212"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center"
              >
                <input
                  class="w-11 bg-white/10 text-right text-sm text-foreground-600 outline-none focus:ring-1 focus:ring-foreground-300 rounded px-0.5"
                  type="text"
                  value="212"
                />
                <span
                  class="w-2 text-xs text-foreground-500"
                  style="visibility: hidden;"
                >
                  °
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-2"
            >
              <div
                class="flex-1"
                style="--slider-gradient: linear-gradient(to right, rgb(0 0 0), rgb(0 255 0));"
              >
                <div
                  aria-label="Green"
                  class="flex flex-col w-full gap-1"
                  data-hover="false"
                  data-orientation="horizontal"
                  data-slot="base"
                  id="react-aria-_r_52_"
                  role="group"
                >
                  <div
                    class="relative flex gap-2 items-center"
                    data-slot="track-wrapper"
                  >
                    <div
                      class="w-3 mr-2"
                      data-slot="startContent"
                    >
                      G
                    </div>
                    <div
                      class="flex w-full relative rounded-full border-x-transparent h-3 my-[calc((theme(spacing.6)-theme(spacing.3))/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground bg-transparent border-transparent! border-x-[calc(theme(spacing.5)/2)] bg-[image:var(--slider-gradient)] bg-origin-border bg-clip-border"
                      data-fill-end="false"
                      data-fill-start="true"
                      data-slot="track"
                      data-thumb-hidden="false"
                      data-vertical="false"
                      style="position: relative; touch-action: none;"
                    >
                      <div
                        class="h-full absolute bg-transparent"
                        data-slot="filler"
                        style="left: 0%; width: 4.705882352941177%;"
                      />
                      <div
                        aria-label="Slider thumb 1"
                        class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small size-5 after:size-4"
                        data-react-aria-pressable="true"
                        data-slot="thumb"
                        index="0"
                        orientation="horizontal"
                        style="position: absolute; left: 4.705882352941177%; transform: translate(-50%, -50%); touch-action: none;"
                      >
                        <div
                          style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                        >
                          <input
                            aria-describedby=""
                            aria-details=""
                            aria-labelledby="react-aria-_r_52_"
                            aria-orientation="horizontal"
                            aria-valuetext="12"
                            id="react-aria-_r_52_-0"
                            max="255"
                            min="0"
                            step="1"
                            tabindex="0"
                            type="range"
                            value="12"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center"
              >
                <input
                  class="w-11 bg-white/10 text-right text-sm text-foreground-600 outline-none focus:ring-1 focus:ring-foreground-300 rounded px-0.5"
                  type="text"
                  value="12"
                />
                <span
                  class="w-2 text-xs text-foreground-500"
                  style="visibility: hidden;"
                >
                  °
                </span>
              </div>
            </div>
            <div
              class="flex items-center gap-2"
            >
              <div
                class="flex-1"
                style="--slider-gradient: linear-gradient(to right, rgb(0 0 0), rgb(0 0 255));"
              >
                <div
                  aria-label="Blue"
                  class="flex flex-col w-full gap-1"
                  data-hover="false"
                  data-orientation="horizontal"
                  data-slot="base"
                  id="react-aria-_r_58_"
                  role="group"
                >
                  <div
                    class="relative flex gap-2 items-center"
                    data-slot="track-wrapper"
                  >
                    <div
                      class="w-3 mr-2"
                      data-slot="startContent"
                    >
                      B
                    </div>
                    <div
                      class="flex w-full relative rounded-full border-x-transparent h-3 my-[calc((theme(spacing.6)-theme(spacing.3))/2)] data-[fill-start=true]:border-s-foreground data-[fill-end=true]:border-e-foreground bg-transparent border-transparent! border-x-[calc(theme(spacing.5)/2)] bg-[image:var(--slider-gradient)] bg-origin-border bg-clip-border"
                      data-fill-end="false"
                      data-fill-start="true"
                      data-slot="track"
                      data-thumb-hidden="false"
                      data-vertical="false"
                      style="position: relative; touch-action: none;"
                    >
                      <div
                        class="h-full absolute bg-transparent"
                        data-slot="filler"
                        style="left: 0%; width: 10.196078431372548%;"
                      />
                      <div
                        aria-label="Slider thumb 1"
                        class="flex justify-center items-center before:absolute before:w-11 before:h-11 before:rounded-full after:shadow-small after:bg-background data-[focused=true]:z-10 outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 rounded-full after:rounded-full bg-foreground top-1/2 cursor-grab data-[dragging=true]:cursor-grabbing ring-transparent border-0 after:transition-all motion-reduce:after:transition-none data-[dragging=true]:after:scale-80 shadow-small size-5 after:size-4"
                        data-react-aria-pressable="true"
                        data-slot="thumb"
                        index="0"
                        orientation="horizontal"
                        style="position: absolute; left: 10.196078431372548%; transform: translate(-50%, -50%); touch-action: none;"
                      >
                        <div
                          style="border: 0px; clip: rect(0px); clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
                        >
                          <input
                            aria-describedby=""
                            aria-details=""
                            aria-labelledby="react-aria-_r_58_"
                            aria-orientation="horizontal"
                            aria-valuetext="26"
                            id="react-aria-_r_58_-0"
                            max="255"
                            min="0"
                            step="1"
                            tabindex="0"
                            type="range"
                            value="26"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex items-center"
              >
                <input
                  class="w-11 bg-white/10 text-right text-sm text-foreground-600 outline-none focus:ring-1 focus:ring-foreground-300 rounded px-0.5"
                  type="text"
                  value="26"
                />
                <span
                  class="w-2 text-xs text-foreground-500"
                  style="visibility: hidden;"
                >
                  °
                </span>
              </div>
            </div>
          </div>
          <style>
            
      .popover-content-0 { background-color: oklch(0.55 0.22 27); }
      .popover-base-0 {
        &:before {
          background-color: oklch(0.55 0.22 27);
          
        }
       }
      
          </style>
          <div
            class="flex items-center justify-between"
          >
            <div
              class="inline-flex items-center justify-center h-auto"
              role="group"
            >
              <button
                aria-label="Switch to OKLCH"
                class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 [&:not(:first-child):not(:last-child)]:rounded-none [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-default/40 text-default-700 rounded-none first:rounded-s-medium last:rounded-e-medium data-[hover=true]:opacity-hover px-2 min-w-12 h-8 text-xs gap-1"
                data-react-aria-pressable="true"
                tabindex="0"
                type="button"
              >
                OKLCH
              </button>
              <button
                aria-label="Switch to HSL"
                class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 [&:not(:first-child):not(:last-child)]:rounded-none [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-default/40 text-default-700 rounded-none first:rounded-s-medium last:rounded-e-medium data-[hover=true]:opacity-hover px-2 min-w-12 h-8 text-xs gap-1"
                data-react-aria-pressable="true"
                tabindex="0"
                type="button"
              >
                HSL
              </button>
              <button
                aria-label="Switch to RGB"
                class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 [&:not(:first-child):not(:last-child)]:rounded-none [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-default text-default-foreground rounded-none first:rounded-s-medium last:rounded-e-medium data-[hover=true]:opacity-hover px-2 min-w-12 h-8 text-xs gap-1"
                data-react-aria-pressable="true"
                tabindex="0"
                type="button"
              >
                RGB
                <span
                  class="heroui-ripple"
                  style="position: absolute; background-color: currentcolor; border-radius: 100%; transform-origin: center; pointer-events: none; overflow: hidden; inset: 0px; z-index: 0; width: 0px; height: 0px; transform: translate(0px, 0px) scale(0); opacity: 0.35;"
                />
              </button>
            </div>
            <div
              class="flex items-center gap-1"
            >
              <button
                aria-label="Random color"
                class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny gap-2 rounded-small px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 min-w-8 w-8 h-8 rounded-s-none border-l-0"
                data-react-aria-pressable="true"
                tabindex="0"
                type="button"
              >
                <svg
                  class="text-base"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 256 256"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M224,48V96a8,8,0,0,1-8,8H168a8,8,0,0,1,0-16h28.69L182.06,73.37a79.56,79.56,0,0,0-56.13-23.43h-.45A79.52,79.52,0,0,0,69.59,72.71,8,8,0,0,1,58.41,61.27a96,96,0,0,1,135,.79L208,76.69V48a8,8,0,0,1,16,0ZM186.41,183.29a80,80,0,0,1-112.47-.66L59.31,168H88a8,8,0,0,0,0-16H40a8,8,0,0,0-8,8v48a8,8,0,0,0,16,0V179.31l14.63,14.63A95.43,95.43,0,0,0,130,222.06h.53a95.36,95.36,0,0,0,67.07-27.33,8,8,0,0,0-11.18-11.44Z"
                  />
                </svg>
              </button>
              <button
                aria-expanded="false"
                aria-haspopup="dialog"
                aria-label="Change color options"
                class="group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny gap-2 rounded-small px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 min-w-8 w-8 h-8 z-10 aria-expanded:scale-[0.97] aria-expanded:opacity-70 subpixel-antialiased"
                data-react-aria-pressable="true"
                data-slot="trigger"
                tabindex="0"
                type="button"
              >
                <span
                  class="size-8 inline-flex items-center justify-center"
                >
                  <svg
                    class="text-base"
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 256 256"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M40,88H73a32,32,0,0,0,62,0h81a8,8,0,0,0,0-16H135a32,32,0,0,0-62,0H40a8,8,0,0,0,0,16Zm64-24A16,16,0,1,1,88,80,16,16,0,0,1,104,64ZM216,168H199a32,32,0,0,0-62,0H40a8,8,0,0,0,0,16h97a32,32,0,0,0,62,0h17a8,8,0,0,0,0-16Zm-48,24a16,16,0,1,1,16-16A16,16,0,0,1,168,192Z"
                    />
                  </svg>
                </span>
              </button>
              <button
                aria-label="Remove color"
                class="z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 text-tiny gap-2 rounded-small px-0 !gap-0 transition-transform-colors-opacity motion-reduce:transition-none bg-transparent text-default-foreground data-[hover=true]:bg-default/40 min-w-8 w-8 h-8"
                data-react-aria-pressable="true"
                tabindex="0"
                type="button"
              >
                <svg
                  class="text-base"
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 256 256"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M216,48H176V40a24,24,0,0,0-24-24H104A24,24,0,0,0,80,40v8H40a8,8,0,0,0,0,16h8V208a16,16,0,0,0,16,16H192a16,16,0,0,0,16-16V64h8a8,8,0,0,0,0-16ZM96,40a8,8,0,0,1,8-8h48a8,8,0,0,1,8,8v8H96Zm96,168H64V64H192ZM112,104v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Zm48,0v64a8,8,0,0,1-16,0V104a8,8,0,0,1,16,0Z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
